loadbalancing_kubernetes/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: ingress-nginx
spec:
  selector:
    app: backend
  ports:
    - port: 80
  #     targetPort: 8080
  #     nodePort: 30008
  # type: LoadBalancer
